# cam-control-server

./: .gitignore  CHANGELOG.md  README.md  max_dl.txt  Замечания1.txt  Замечания3.txt  Замечания4.txt  замечания.txt
01_ASCOM_Local_Server/: ASCOM.ProjectR1.LocalServer.sln  README.md
02_Python_Camera_Service/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
02_Python_Camera_Service/alembic/: env.py
02_Python_Camera_Service/alembic/versions/: 20260305_0001_initial.py  20260308_0002_operational_tables.py  20260309_0003_camera_profiles_connection_fields.py
02_Python_Camera_Service/app/: __init__.py  camera_runtime.py  config.py  db.py  logging_setup.py  main.py  models.py  repository.py  schemas.py  sdk_adapter.py  storage.py
02_Python_Camera_Service/app/api/: routes.py
02_Python_Camera_Service/tests/: conftest.py  test_api.py  test_cooling_regression.py  test_cooling_v23.py  test_integration_storage_and_mock.py  test_migrations_and_storage_modes.py
02_Python_Camera_Service/tools/: probe_greateyes_network_handshake.py  probe_greateyes_sdk.py
03_GreatEyes_SDK_Adapter/: README.md  STATUS_MAPPING.md
04_Storage/: README.md
05_UI/: README.md
05_UI/web/: app.js  (+2 more)
06_Testing/: README.md  package-lock.json  package.json  playwright.config.ts
07_Deployment_and_Ops/: 01_Быстрый_деплой_на_ПК_камеры.md  02_План_развертывания_на_этом_ПК.md  03_Отчет_нативные_тесты_с_камерой_2026-03-07.md  04_Инженерный_протокол_интеграции_GreatEyes_SDK.md  05_Полный_план_работ_и_статус.md  06_Отчет_приемочный_прогон_2026-03-08.md  README.md  deploy_camera_pc.ps1  (+1 more)
(+133 files in other folders)
